# mini-ecommerce

./: Makefile  README.md
backend/: README.md  mypy.ini  pyproject.toml  ruff.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0002_add_paid_at_to_orders.py
backend/app/: __init__.py  main.py
backend/app/api/: admin.py  auth.py  cart.py  catalog.py  checkout.py  orders.py  router.py  users.py  webhooks.py
backend/app/core/: config.py  deps.py  middleware.py  security.py
backend/app/db/: seed.py  session.py
backend/app/models/: __init__.py  address.py  cart.py  category.py  order.py  product.py  token.py  user.py
backend/app/repositories/: base.py  carts.py  categories.py  orders.py  products.py  tokens.py  users.py
backend/app/schemas/: auth.py  cart.py  category.py  common.py  order.py  product.py  user.py
backend/app/services/: auth.py  cart.py  catalog.py  orders.py
backend/app/utils/: body_limit.py  errors.py  metrics.py  pagination.py
backend/tests/: conftest.py  test_auth.py  test_cart_checkout.py  test_catalog.py
deploy/: docker-compose.yml
deploy/docker/: backend.Dockerfile
deploy/env/: .env.example
frontend/: README.md  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: auth.ts  cart.ts  categories.ts  client.ts  health.ts  mockServer.ts  orders.ts  products.ts
frontend/src/config/: env.ts
frontend/src/hooks/: useAuth.ts  useCart.ts  useProducts.ts
frontend/src/lib/: auth-storage.ts  toast.ts  zodResolver.ts
frontend/src/pages/: AboutPage.tsx  (+11 more)
(+23 files in other folders)
