[tool.poetry]
name = "mini-ecommerce-backend"
version = "0.1.0"
description = "Mini E-commerce backend"
authors = ["Mini Ecommerce <dev@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = "^2.0.29"
aiomysql = "^0.2.0"
alembic = "^1.13.1"
python-jose = "^3.3.0"
passlib = {version = "^1.7.4", extras = ["bcrypt"]}
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
python-json-logger = "^2.0.7"
httpx = "^0.27.0"
async-exit-stack = "^1.0.1"
async-generator = "^1.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"
ruff = "^0.3.4"
mypy = "^1.8.0"
asgi-lifespan = "^2.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--strict-markers --disable-warnings"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "UP", "B", "C4", "TID"]

[tool.ruff.per-file-ignores]
"backend/tests/*" = ["S101"]

[tool.mypy]
python_version = "3.11"
plugins = []
ignore_missing_imports = true
strict_optional = true
warn_unused_ignores = true
warn_return_any = true
warn_unused_configs = true
